# straightline

./: README.md  ações semânticas.md  ocaml-setup.sh  shell-opam.nix  shell.nix
.github/workflows/: workflow.yml
interpreter/: absyn.ml  absyntree.ml  driver.ml  dune  interpreter.ml  parser.mly
scanner/: README.md  scanner.mli
scanner-adhoc/: README.md  scanner_test.ml
